# mandelbrot-set

./: .gitignore  CMakeLists.txt  README.md  bmpfile.c  bmpfile.h  bmpheader.h  bmpimage.h  main.c  mandelbrot.c  mandelbrot.h  rgb.h  structs.h
include/: bmpimage.h  mandelbrot.h  rgb.h  zoom.h
src/: bmpfile.c  main.c  mandelbrot.c
